Add new and create views.

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,4 @@
-index.html.erb
+<h1>Daily Tasks for your Job Search</h1>
+<h3>Name: $<%= @tasks.name %></h3>
+
+<h1>Weekly Tasks for your Job Search</h1>
