--- a/app/views/tasks/create.html.erb
+++ b/app/views/tasks/create.html.erb
@@ -1,1 +1,3 @@
-create.html.erb
+<h1><%= @task.name %> -created<h1>
+<h4>Name: <%= @task.name %></h4>
+<h4>Description: <%= @task.description %></h4>
